# PlacementTrackr

./: README.md
backend/: Dockerfile  build.sh  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
frontend/: README.md  index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminSidebar.tsx  StudentSidebar.tsx
frontend/src/context/: StudentContext.tsx
frontend/src/integrations/supabase/: client.ts
frontend/src/pages/: AdminLogin.tsx  Index.tsx  StudentLogin.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  AdminStudents.tsx
frontend/src/pages/student/: StudentDashboard.tsx  StudentNotifications.tsx  StudentProfile.tsx  StudentTracker.tsx
frontend/supabase/: config.toml
