[tool.poetry]
name = "resume-parser"
version = "0.1.0"
description = "FastAPI resume parser with OCR"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.7"
pdf2image = "^1.16.3"
pytesseract = "^0.3.10"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
